full-moon/tests/roblox_cases/fail/parser/type_table_no_right_brace/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: expected `}` to close type table
  ┌─ source.lua:3:1
  │
3 │ local x = 1
  │ ^^^^^


